--- a/web1/src/app/report/old-sale/old-sale.component.html
+++ b/web1/src/app/report/old-sale/old-sale.component.html
@@ -100,7 +100,7 @@
                                 </form>
                                 <!-- Purchase list -->
                                 <div class="body p-2">
-                                    <div id="PurchasePDF" class="col-sm-12" style="overflow: auto; height: 450px;">
+                                    <div id="oldsale-content" class="col-sm-12" style="overflow: auto; height: 450px;">
                                         <table class="table table-striped table-hover table-sm table-bordered"
                                             style="border: 2px solid #fff !important;" id="SaleExcel">
                                             <thead>
@@ -127,13 +127,10 @@
                                                             (click)="exportAsXLSXMaster()">
                                                         </i>
                                                        
-                                                        <button class="bg_none ms-4"
-                                                        printTitle="sale Report {{this.shopLists}}"
-                                                        printSectionId="PurchasePDF" ngxPrint
-                                                        styleSheetFile="../../../assets/pdf.css">
-                                                        <i class="far fa-file-pdf "
-                                                            style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
-                                                    </button>
+                                                        <button class="bg_none ms-4" (click)="print('oldsale-content')" >
+                                                            <i class="far fa-file-pdf "
+                                                                style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                                                        </button>
                                                     </td>
                                                     <td></td>
                                                     <td></td>
@@ -394,19 +391,12 @@
                                                 (click)="BillDetailsFromReset()">
                                                 Reset
                                             </button>
-                                            <button class=" ms-3" mat-raised-button color="primary"
-                                                printTitle="Sale Product Report {{this.shopLists}}"
-                                                printSectionId="producttype" ngxPrint
-                                                styleSheetFile="../../../assets/pdf.css">
-                                                <i class="far fa-file-pdf "
-                                                    style="color: #ffffff;font-size: 22px;cursor: pointer;"> </i>
-                                            </button>
                                         </div>
                                     </div>
                                 </form>
                                 <!-- Purchase Detailed list -->
                                 <div class="body p-2">
-                                    <div id="producttype" class="col-sm-12" style="overflow: auto; height: 450px;">
+                                    <div id="oldsaletProduct-content" class="col-sm-12" style="overflow: auto; height: 450px;">
                                         <table class="table table-striped table-hover table-sm table-bordered"
                                             style="border: 2px solid #fff !important;" id="saleDetailExcel">
                                             <thead>
@@ -437,7 +427,10 @@
                                                             aria-hidden="true" type="button"
                                                             (click)="exportAsXLSXDetail()">
                                                         </i>
-
+                                                        <button class="bg_none ms-4" (click)="print('oldsaletProduct-content')" >
+                                                            <i class="far fa-file-pdf "
+                                                                style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                                                        </button>
                                                     </td>
                                                     <td></td>
                                                     <td></td>
