--- a/web1/src/app/report/inventory-report/inventory-report.component.html
+++ b/web1/src/app/report/inventory-report/inventory-report.component.html
@@ -213,7 +213,7 @@
                   </form>
                   <!--  list -->
                   <div class="body p-2">
-                    <div id="inventorysPDF" class="col-sm-12" style="overflow: auto; height: 450px;">
+                    <div id="Inventory-content" class="col-sm-12" style="overflow: auto; height: 450px;">
                   
                       <table class="table table-striped table-hover table-sm table-bordered"
                         style="border: 2px solid #fff !important;" id="inventoryExcel">
@@ -245,13 +245,10 @@
                             <td>
                               <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button"
                                 (click)="exportAsXLSXDetail()"> </i>
-                                <button class="bg_none ms-4"
-                                printTitle="inventory Report - {{this.selectsShop}}"
-                                printSectionId="inventorysPDF" ngxPrint
-                                ngxPrint [printStyle]="{th : {'color': '#000','border': '1px solid #000','font-Size':'17px'},td : {'color': '#000','border': '1px solid #000','text-align':'center'}, thead : {'background': '#e2e2e2'}, table:{'border': '1px solid #000','zoom': '50%','border-collapse': 'collapse','margin': '0', 'panding':'0', 'font-family': 'Arial, Helvetica, sans-serif'} }">
-                                <i class="far fa-file-pdf "
-                                    style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
-                            </button>
+                                <button class="bg_none ms-4" (click)="print('Inventory-content')" >
+                                  <i class="far fa-file-pdf "
+                                      style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                              </button>
                             </td>
                             <td *ngIf="user.UserGroup === 'CompanyAdmin'"></td>
                             <td *ngIf="user.UserGroup === 'CompanyAdmin'"></td>
@@ -380,7 +377,7 @@
                   </form>
                   <!-- list -->
                   <div class="body p-2">
-                    <div class="col-sm-12" style="overflow: auto; height: 450px;">
+                    <div id="ProductSummary-content" class="col-sm-12" style="overflow: auto; height: 450px;">
                       <table class="table table-striped table-hover table-sm table-bordered"
                         style="border: 2px solid #fff !important;" id="ProductSummaryExcel">
                         <thead>
@@ -404,8 +401,10 @@
                             <td>
                               <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button">
                               </i>
-                              <i class="far fa-file-pdf ms-4" style="color: #2433be;font-size: 22px;cursor: pointer;">
-                              </i>
+                              <button class="bg_none ms-4" (click)="print('ProductSummary-content')" >
+                                <i class="far fa-file-pdf "
+                                    style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                            </button>
                             </td>
                             <td></td>
                             <td></td>
@@ -589,17 +588,12 @@
                         <button class="me-2" type="submit" mat-raised-button color="primary"> Search </button>
                         <button type="button" mat-raised-button color="warn" (click)="productExpiryFromReset()"> Reset
                         </button>
-                        <button  class=" ms-2" mat-raised-button color="primary"  printTitle="Prodcut Expiry Report {{this.selectsShop}}" styleSheetFile="../../../assets/pdf.css" printSectionId="ProdcutExpiry" ngxPrint >
-                          <i  class="far fa-file-pdf "
-                          style="color: #ffffff;font-size: 22px;cursor: pointer;"> </i>
-                      </button>
-                     
                       </div>
                     </div>
                   </form>
                   <!--  list -->
                   <div class="body p-2">
-                    <div id="ProdcutExpiry" class="col-sm-12" style="overflow: auto; height: 450px;">
+                    <div id="ProductExpiry-content" class="col-sm-12" style="overflow: auto; height: 450px;">
                       <table class="table table-striped table-hover table-sm table-bordered"
                         style="border: 2px solid #fff !important;" id="ProductExpiry">
                         <thead>
@@ -629,7 +623,10 @@
                               <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button"
                                 (click)="exportAsXLSXExpiry()">
                               </i>
-                              
+                              <button class="bg_none ms-4" (click)="print('ProductExpiry-content')" >
+                                <i class="far fa-file-pdf "
+                                    style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                            </button>
                             </td>
                             <td></td>
                             <td></td>
