--- a/web1/src/app/report/product-return/product-return.component.html
+++ b/web1/src/app/report/product-return/product-return.component.html
@@ -91,7 +91,7 @@
                     </form>
                     <!-- Purchase list -->
                     <div class="body p-2">
-                      <div id="PurchaseRetrunPDF" class="col-sm-12" style="overflow: auto; height: 450px;">
+                      <div id="ProductReturn-content" class="col-sm-12" style="overflow: auto; height: 450px;">
                         <table class="table table-striped table-hover table-sm table-bordered"
                           style="border: 2px solid #fff !important;" id="purchaseExcel">
                           <thead>
@@ -116,13 +116,10 @@
                                 <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button"
                                   (click)="exportAsXLSXMaster()">
                                 </i>
-                                <button class="bg_none ms-4"
-                                printTitle="Product Retrun Report - {{this.selectsShop}}"
-                                printSectionId="PurchaseRetrunPDF" ngxPrint
-                                ngxPrint [printStyle]="{th : {'color': '#000','border': '1px solid #000','font-Size':'17px'},td : {'color': '#000','border': '1px solid #000','text-align':'center'}, thead : {'background': '#e2e2e2'}, table:{'border': '1px solid #000','zoom': '80%','border-collapse': 'collapse','margin': '0', 'panding':'0', 'font-family': 'Arial, Helvetica, sans-serif'} }">
-                                <i class="far fa-file-pdf "
-                                    style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
-                            </button>
+                                <button class="bg_none ms-4" (click)="print('ProductReturn')" >
+                                  <i class="far fa-file-pdf "
+                                      style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                              </button>
                               </td>
                               <td></td>
                               <td></td>
@@ -310,7 +307,7 @@
                     </form>
                     <!-- Purchase Detailed list -->
                     <div class="body p-2 Purchase_Detailed">
-                      <div id="ProductTypesPDF" class="col-sm-12" style="overflow: auto; height: 450px;">
+                      <div id="ProductReturnProduct-content" class="col-sm-12" style="overflow: auto; height: 450px;">
                         <table class="table table-striped table-hover table-sm table-bordered"
                           style="border: 2px solid #fff !important;" id="purchaseDetailExcel">
                           <thead>
@@ -345,13 +342,10 @@
                                 <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button"
                                   (click)="exportAsXLSXDetail()">
                                 </i>
-                                <button class="bg_none ms-4"
-                                printTitle="Product Type Retrun Report - {{this.selectsShop}}"
-                                printSectionId="ProductTypesPDF" ngxPrint
-                                ngxPrint [printStyle]="{th : {'color': '#000','border': '1px solid #000','font-Size':'17px'},td : {'color': '#000','border': '1px solid #000','text-align':'center'}, thead : {'background': '#e2e2e2'}, table:{'border': '1px solid #000','zoom': '75%','border-collapse': 'collapse','margin': '0', 'panding':'0', 'font-family': 'Arial, Helvetica, sans-serif'} }">
-                                <i class="far fa-file-pdf "
-                                    style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
-                            </button>
+                                <button class="bg_none ms-4" (click)="print('ProductReturnProduct')" >
+                                  <i class="far fa-file-pdf "
+                                      style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                              </button>
                               </td>
                               <td></td>
                               <td></td>
