--- a/web1/src/app/report/purchase-report/purchase-report.component.html
+++ b/web1/src/app/report/purchase-report/purchase-report.component.html
@@ -101,7 +101,7 @@
                   </form>
                   <!-- Purchase list -->
                   <div class="body p-2">
-                    <div id="PurchasePDF" class="col-sm-12" style="overflow: auto; height: 450px;">
+                    <div id="Purchase-content" class="col-sm-12" style="overflow: auto; height: 450px;">
                       <table class="table table-striped table-hover table-sm table-bordered"
                         style="border: 2px solid #fff !important;" id="purchaseExcel">
                         <thead>
@@ -127,13 +127,10 @@
                               <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button"
                                 (click)="exportAsXLSXMaster()">
                               </i>
-                              <button class="bg_none ms-4"
-                              printTitle="Purchase Report - {{this.selectsShop}}"
-                              printSectionId="PurchasePDF" ngxPrint
-                              ngxPrint [printStyle]="{th : {'color': '#000','border': '1px solid #000','font-Size':'17px'},td : {'color': '#000','border': '1px solid #000','text-align':'center'}, thead : {'background': '#e2e2e2'}, table:{'zoom': '80%','border-collapse': 'collapse','margin': '0', 'panding':'0', 'font-family': 'Arial, Helvetica, sans-serif'} }">
-                              <i class="far fa-file-pdf "
-                                  style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
-                          </button>
+                              <button class="bg_none ms-4" (click)="print('Purchase-content')" >
+                                <i class="far fa-file-pdf "
+                                    style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                            </button>
                             </td>
                             <td></td>
                             <td></td>
@@ -348,7 +345,7 @@
                   </form>
                   <!-- Purchase Detailed list -->
                   <div class="body p-2">
-                    <div id="producttype" class="col-sm-12" style="overflow: auto; height: 450px;">
+                    <div id="PurchaseDetail-content" class="col-sm-12" style="overflow: auto; height: 450px;">
                       <table class="table table-striped table-hover table-sm table-bordered"
                         style="border: 2px solid #fff !important;" id="purchaseDetailExcel">
                         <thead>
@@ -388,13 +385,10 @@
                               <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button"
                                 (click)="exportAsXLSXDetail()">
                               </i>
-                              <button class="bg_none ms-4"
-                              printTitle="Purchase Product Type Report - {{this.selectsShop}}"
-                              printSectionId="producttype" ngxPrint
-                              ngxPrint [printStyle]="{th : {'color': '#000','border': '1px solid #000','font-Size':'17px'},td : {'color': '#000','border': '1px solid #000','text-align':'center'}, thead : {'background': '#e2e2e2'}, table:{'zoom': '45%','border-collapse': 'collapse','margin': '0', 'panding':'0', 'font-family': 'Arial, Helvetica, sans-serif'} }">
-                              <i class="far fa-file-pdf "
-                                  style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
-                          </button>
+                              <button class="bg_none ms-4" (click)="print('PurchaseDetail-content')" >
+                                <i class="far fa-file-pdf "
+                                    style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                            </button>
                             </td>
                             <td></td>
                             <td></td>
@@ -516,7 +510,7 @@
                     </div>
                   </form>
                   <div class="body p-2">
-                    <div id="Purchasecharge" class="col-sm-12" style="overflow: auto; height: 450px;">
+                    <div id="PurchaseService-content" class="col-sm-12" style="overflow: auto; height: 450px;">
                       <table class="table table-striped table-hover table-sm table-bordered"
                         style="border: 2px solid #fff !important;" id="purchaseChargeExcel">
                         <thead>
@@ -536,13 +530,10 @@
                               <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button"
                                 (click)="exportAsXLSXcharge()">
                               </i>
-                              <button class="bg_none ms-4"
-                              printTitle="Purchase Charge Report - {{this.selectsShop}}"
-                              printSectionId="Purchasecharge" ngxPrint
-                              ngxPrint [printStyle]="{th : {'color': '#000','border': '1px solid #000','font-Size':'17px'},td : {'color': '#000','border': '1px solid #000','text-align':'center'}, thead : {'background': '#e2e2e2'}, table:{'border': '1px solid #000','zoom': '100%','border-collapse': 'collapse','margin': '0', 'panding':'0', 'font-family': 'Arial, Helvetica, sans-serif'} }">
-                              <i class="far fa-file-pdf "
-                                  style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
-                          </button>
+                              <button class="bg_none ms-4" (click)="print('PurchaseService-content')" >
+                                <i class="far fa-file-pdf "
+                                    style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                            </button>
                             </td>
                             <td></td>
                             <td></td>
@@ -721,17 +712,13 @@
                         <button class="me-2" type="submit" mat-raised-button color="primary"> Search </button>
                         <button type="button" mat-raised-button color="warn" (click)="productExpiryFromReset()"> Reset
                         </button>
-                        <button class="ms-2" mat-raised-button color="primary"
-                          printTitle="Prodcut Expriy Report {{this.selectsShop}}" printSectionId="productExpiryPDF"
-                          ngxPrint styleSheetFile="../../../assets/pdf.css">
-                          <i class="far fa-file-pdf " style="color: #ffffff;font-size: 22px;cursor: pointer;"> </i>
-                        </button>
+                      
                       </div>
                     </div>
                   </form>
                   <!--  list -->
                   <div class="body p-2">
-                    <div id="productExpiryPDF" class="col-sm-12" style="overflow: auto; height: 450px;">
+                    <div id="ProductExpiry-content" class="col-sm-12" style="overflow: auto; height: 450px;">
                       <table class="table table-striped table-hover table-sm table-bordered"
                         style="border: 2px solid #fff !important;" id="ProductExpiry">
                         <thead>
@@ -761,8 +748,10 @@
                               <i class="fa fa-file-excel-o excel" title="ExportAsXLSX" aria-hidden="true" type="button"
                                 (click)="exportAsXLSXExpiry()">
                               </i>
-                              <i class="far fa-file-pdf ms-4" style="color: #2433be;font-size: 22px;cursor: pointer;">
-                              </i>
+                              <button class="bg_none ms-4" (click)="print('ProductExpiry-content')" >
+                                <i class="far fa-file-pdf "
+                                    style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                            </button>
                             </td>
                             <td></td>
                             <td></td>
