--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -548,11 +548,7 @@
                                                     (click)="BillDetailsFromReset()">
                                                     Reset
                                                 </button>
-                                                <button class=" ms-3" mat-raised-button color="primary" (click)="print('saleDetail-content')" >
-                                                    <i class="far fa-file-pdf "
-                                                        style="color: #ffffff;font-size: 22px;cursor: pointer;"> 
-                                                    </i>
-                                                </button>
+                                            
                                             </div>
                                         </div>
                                     </form>
@@ -604,7 +600,10 @@
                                                                 aria-hidden="true" type="button"
                                                                 (click)="exportAsXLSXDetail()">
                                                             </i>
-
+                                                            <button class="bg_none ms-4" (click)="print('saleDetail-content')" >
+                                                                <i class="far fa-file-pdf "
+                                                                    style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                                                            </button>
                                                         </td>
                                                         <td></td>
                                                         <td></td>
@@ -801,17 +800,11 @@
                                                 <button class="me-1" mat-raised-button color="primary">Search</button>
                                                 <button class="mr-0" type="button" mat-raised-button color="warn"
                                                     (click)="BillServiceFromReset()">Reset</button>
-                                                <button class=" ms-1" mat-raised-button color="primary"
-                                                    printTitle='Bill Service {{this.shopLists}}' [useExistingCss]="true"
-                                                    printSectionId="Purchasecharge" ngxPrint>
-                                                    <i class="far fa-file-pdf "
-                                                        style="color: #ffffff;font-size: 22px;cursor: pointer;"> </i>
-                                                </button>
                                             </div>
                                         </div>
                                     </form>
                                     <div class="body p-2">
-                                        <div id="Purchasecharge" class="col-sm-12"
+                                        <div id="saleService-content" class="col-sm-12"
                                             style="overflow: auto; height: 450px;">
                                             <table class="table table-striped table-hover table-sm table-bordered"
                                                 style="border: 2px solid #fff !important;" id="billServiceExcel">
@@ -842,6 +835,10 @@
                                                                 aria-hidden="true" type="button"
                                                                 (click)="exportAsXLSXcharge()">
                                                             </i>
+                                                            <button class="bg_none ms-4" (click)="print('saleService-content')" >
+                                                                <i class="far fa-file-pdf "
+                                                                    style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                                                            </button>
                                                         </td>
                                                         <td></td>
                                                         <td></td>
@@ -1104,19 +1101,12 @@
                                                     (click)="BillCancelFromReset()">
                                                     Reset
                                                 </button>
-                                                <button class=" ms-3" mat-raised-button color="primary"
-                                                    printTitle="Sale Cancel Product Report {{this.shopLists}}"
-                                                    printSectionId="productCanceltype" ngxPrint
-                                                    styleSheetFile="../../../assets/pdf.css">
-                                                    <i class="far fa-file-pdf "
-                                                        style="color: #ffffff;font-size: 22px;cursor: pointer;"> </i>
-                                                </button>
                                             </div>
                                         </div>
                                     </form>
-                                    <!-- Purchase Detailed list -->
+                                    <!--  ProductCancel list -->
                                     <div class="body p-2">
-                                        <div id="productCanceltype" class="col-sm-12" style="overflow: auto; height: 450px;">
+                                        <div id="ProductCancel-content" class="col-sm-12" style="overflow: auto; height: 450px;">
                                             <table class="table table-striped table-hover table-sm table-bordered"
                                                 style="border: 2px solid #fff !important;" id="saleCancelExcel">
                                                 <thead>
@@ -1160,7 +1150,10 @@
                                                                 aria-hidden="true" type="button"
                                                                 (click)="exportAsXLSXCancel()">
                                                             </i>
-
+                                                            <button class="bg_none ms-4" (click)="print('ProductCancel-content')" >
+                                                                <i class="far fa-file-pdf "
+                                                                    style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                                                            </button>
                                                         </td>
                                                         <td></td>
                                                         <td></td>
@@ -1497,19 +1490,13 @@
                                                     (click)="BillPendingFromReset()">
                                                     Reset
                                                 </button>
-                                                <button class=" ms-3" mat-raised-button color="primary"
-                                                    printTitle="Sale PendingProduct Report {{this.shopLists}}"
-                                                    printSectionId="productPendingtype" ngxPrint
-                                                    styleSheetFile="../../../assets/pdf.css">
-                                                    <i class="far fa-file-pdf "
-                                                        style="color: #ffffff;font-size: 22px;cursor: pointer;"> </i>
-                                                </button>
+                                             
                                             </div>
                                         </div>
                                     </form>
-                                    <!-- Purchase Detailed list -->
+                                    <!--ProductPending list -->
                                     <div class="body p-2">
-                                        <div id="productPendingtype" class="col-sm-12" style="overflow: auto; height: 450px;">
+                                        <div id="ProductPending-content" class="col-sm-12" style="overflow: auto; height: 450px;">
                                             <table class="table table-striped table-hover table-sm table-bordered"
                                                 style="border: 2px solid #fff !important;" id="salePendingExcel">
                                                 <thead>
@@ -1550,7 +1537,10 @@
                                                                 aria-hidden="true" type="button"
                                                                 (click)="exportAsXLSXPending()">
                                                             </i>
-
+                                                            <button class="bg_none ms-4" (click)="print('ProductPending-content')" >
+                                                                <i class="far fa-file-pdf "
+                                                                    style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                                                            </button>
                                                         </td>
                                                         <td></td>
                                                         <td></td>
@@ -1898,19 +1888,13 @@
                                                     (click)="BillExpirysFromReset()">
                                                     Reset
                                                 </button>
-                                                <button class=" ms-3" mat-raised-button color="primary"
-                                                    printTitle="Sale Product Expiry Report {{this.shopLists}}"
-                                                    printSectionId="producttype" ngxPrint
-                                                    [printStyle]="{th : {'color': '#000','border': '1px solid #000','font-Size':'17px'},td : {'color': '#000','border': '1px solid #000','text-align':'center'}, thead : {'background': '#e2e2e2'}, table:{'border': '1px solid #000','zoom': '75%','border-collapse': 'collapse','margin': '0px', 'panding':'0px', 'font-family': 'Arial, Helvetica, sans-serif'} }">
-                                                    <i class="far fa-file-pdf "
-                                                        style="color: #ffffff;font-size: 22px;cursor: pointer;"> </i>
-                                                </button>
+                                               
                                             </div>
                                         </div>
                                     </form>
                                     <!-- Purchase Detailed list -->
                                     <div class="body p-2">
-                                        <div id="producttype" class="col-sm-12" style="overflow: auto; height: 450px;">
+                                        <div id="ProductExpiry-content" class="col-sm-12" style="overflow: auto; height: 450px;">
                                             <table class="table table-striped table-hover table-sm table-bordered"
                                                 style="border: 2px solid #fff !important;" id="saleExpiryExcel">
                                                 <thead>
@@ -1944,7 +1928,10 @@
                                                                 aria-hidden="true" type="button"
                                                                 (click)="exportAsXLSXExpiry()">
                                                             </i>
-
+                                                            <button class="bg_none ms-4" (click)="print('ProductExpiry-content')" >
+                                                                <i class="far fa-file-pdf "
+                                                                    style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                                                            </button>
                                                         </td>
                                                         <td></td>
                                                         <td></td>
