--- a/web1/src/app/report/transfer-product-report/transfer-product-report.component.html
+++ b/web1/src/app/report/transfer-product-report/transfer-product-report.component.html
@@ -168,7 +168,7 @@
                             </form>
                             <!-- TransfermasterList list -->
                             <div class="body p-2">
-                                <div id="ProductT" class="col-sm-12" style="overflow: auto; height: 450px;">
+                                <div id="print-content" class="col-sm-12" style="overflow: auto; height: 450px;">
                                     <table  class="table table-striped table-hover table-sm table-bordered"
                                         style="border: 2px solid #fff !important;" id="ProductTransferExcel">
                                         <thead>
@@ -187,13 +187,10 @@
                                                 <td>
                                                     <i class="fa fa-file-excel-o excel" title="ExportAsXLSX"
                                                         aria-hidden="true" type="button" (click)="exportAsXLSX()"> </i>
-                                                        <button class="bg_none ms-4"
-                                                        printTitle="Transfer Product Report - {{this.selectsShop}}"
-                                                        printSectionId="ProductT" ngxPrint
-                                                        ngxPrint [printStyle]="{th : {'color': '#000','border': '1px solid #000','font-Size':'17px'},td : {'color': '#000','border': '1px solid #000','text-align':'center'}, thead : {'background': '#e2e2e2'}, table:{'border': '1px solid #000','zoom': '80%','border-collapse': 'collapse','margin': '0', 'panding':'0', 'font-family': 'Arial, Helvetica, sans-serif'} }">
-                                                        <i class="far fa-file-pdf "
-                                                            style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
-                                                    </button>
+                                                        <button class="bg_none ms-4" (click)="print()" >
+                                                            <i class="far fa-file-pdf "
+                                                                style="color: #1a1e90;font-size: 22px;cursor: pointer;"> </i>
+                                                        </button>
                                                 </td>
                                                 <td></td>
                                                 <td></td>
