--- a/web1/src/app/company-payment/expense/expense.component.html
+++ b/web1/src/app/company-payment/expense/expense.component.html
@@ -122,6 +122,13 @@
     <div class="modal-body ">
         <form #f="ngForm" autocomplete="off">
             <div class="row mt-0">
+                <div class="col-xl-3 col-lg-3 col-md-6 col-6 mb-0" >
+                    <mat-form-field class="example-full-width mb-0">
+                        <mat-label>Expense Date</mat-label>
+                        <input matInput name="ExpenseDate" type="date" [(ngModel)]="data.ExpenseDate"
+                        required  #ExpenseDatecontrol>
+                    </mat-form-field>
+                </div>
                 <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 mb-0 ">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Shop Name</mat-label>
