--- a/web1/src/app/admin/company-setting/company-setting.component.html
+++ b/web1/src/app/admin/company-setting/company-setting.component.html
@@ -264,6 +264,11 @@
                                                                 [(ngModel)]="data.FontsStyle">
                                                         </mat-form-field>
                                                     </div>
+                                                    <div class="col-xl-1 col-lg-1" style=" margin-right: 53px;">
+                                                        <mat-slide-toggle name="AppliedDiscount" color="primary" #Multiplecontrol
+                                                            [(ngModel)]="data.AppliedDiscount" class="example-margin">Round
+                                                        </mat-slide-toggle>
+                                                    </div>
                                                     <div class="col-md-3 ">
                                                         <button mat-raised-button color="primary"
                                                             [disabled]="!settingForm.valid"
