--- a/web1/src/app/report/purchase-report/purchase-report.component.css
+++ b/web1/src/app/report/purchase-report/purchase-report.component.css
@@ -26,3 +26,38 @@
     padding: 0;
     cursor: pointer;
 }
+
+.button-container {
+    position: relative;
+    display: inline-block ;
+  }
+  .hover-box {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    width: 150px;
+    height: 300px;
+    display: none;
+    z-index: 1;
+    color: #333;
+    margin-left: 0px;
+    overflow: scroll;
+  
+  }
+  .hover-box button{
+   border:none;
+   padding: 2px 0px;
+   border-bottom: 1px solid #000;
+   font-size: 14px;
+   text-align: left;
+  }
+  .hover-box button:hover{
+   background-color:#3f51b5;
+   color: #fff;
+  }
+  .button-container:hover .hover-box {
+    display: block;
+    display: grid;
+    /* Show the box when the button-container is hovered */
+  }
